# OpenMPStudy

./: README.md
PrjectSettingScript/: new_fortran_project.sh
PrjectSettingScript/HelloFortran/: CMakeLists.txt  Makefile  README.md
PrjectSettingScript/HelloFortran/src/: array_string.f90  hello_fortran.f90
PrjectSettingScript/Note/: note.md  note2.md
fortran-openmp-study/: CMakeLists.txt  Makefile
fortran-openmp-study/src/: 01_hello_parallel.f90  02_reduction.f90  03_schedule.f90  04_critical_atomic.f90
